# fuel-route-planner

./: .gitignore  README.md  manage.py  pyproject.toml
fuel_route_planner/: asgi.py  settings.py  urls.py  wsgi.py
routes/: apps.py  models.py  serializers.py  urls.py  views.py
routes/data/samples/: ors__geocode_search_get_1770967026600.json
routes/management/commands/: delete_non_us_states.py  geocode_fuel_stations.py  load_fuel_prices.py
routes/migrations/: 0001_initial.py
routes/services/: fuel.py  geocode.py  optimizer.py  routing.py
