[project]
name = "fuel-route-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "numpy>=2.4.2",
    "polyline>=2.0.4",
    "psycopg2-binary>=2.9.11",
    "requests>=2.31.0",
    "scipy>=1.17.0",
]
